2003-11-23  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/redraw.xml.in: added redraw.png. set level to 3
	* boards/boardicons/redraw.png: created
	* src/boards/python/redraw.py: completed, usable board. Need more content yet.	

2003-11-21  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/draw/color-selector.jpg: changed color
	* boards/draw/tool-selector.jpg: changed color
	* boards/geography/board1_0.xml.in: moved map on the right
	* boards/geography/board2_0.xml.in: moved map on the right
	* boards/geography/europe/italy.png: changed color
	* boards/geography/europe/russia.png: changed color
	* boards/skins/default/gcompris-shapebg.jpg: changed color
	* src/boards/draw.c: (display_color_selector): looking improvements
	* src/boards/python/redraw.py: completed the board. Now playable

2003-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/redraw.py: nearly completed the implementation but not yet playable
	* src/boards/python/watercycle.py: added file header
	
2003-11-08  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/gcompris.c: (gcompris_set_locale), (gcompris_init): added display of ao devices
	* src/gcompris/oggplayer.c: (decode_ogg_file),
	(display_ao_devices): created display_ao_devices to display ao devices
	* src/gcompris/soundutil.h: add of display_ao_devices

2003-11-05  Bruno coudoin  <bruno.coudoin@free.fr>

	* TODO: updated
	* src/boards/draw.c: (get_tool_cursor), (item_event_move): changed drawing tools order. 
	*                                                          fixed raise/lower button.
	* src/boards/menu.c: (menu_create_item): put in red sound icon if sound is not working
	* src/gcompris/oggplayer.c: (decode_ogg_file): disable the sounds in gcompris if cannot open it
	* src/gcompris/properties.h: added a boolean to check if the sounds is working
	* src/gcompris/soundutil.c: (scheduler_bgnd): check in the background loop if sounds is enabled